# Polygon_Boolean_Operations_Visualizer

./: CMakeLists.txt  Readme.md
docs/: index.md
include/: BooleanOperations.h  BooleanOperationsGUI.h
src/: BooleanOperationsGUI.cpp  Booleanoperations.cpp  main.cpp
